Handle duplicate usernames
